part4/401/manifests/logoutputdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: course-exercises
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
        - name: logoutput
          image: usermine12/dvopskube-401-logoutput
          volumeMounts:
            - name: logoutput-config-volume
              mountPath: /etc/config
          resources:
            limits:
              cpu: "100m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
      volumes:
        - name: logoutput-config-volume
          configMap:
            name: logoutput-configmap
            items:
              - key: information
                path: information.txt
