part4/401/manifests/postgresdeployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: course-exercises
  name: postgres-stset
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgresapp
  template:
    metadata:
      labels:
        app: postgresapp
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - name: web
              containerPort: 5432
          volumeMounts:
            - name: postgres-data-storage
              mountPath: /data
          resources:
            limits:
              cpu: "200m"
              memory: "612Mi"
  volumeClaimTemplates:
    - metadata:
        name: postgres-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
